# django-book-mysite-sample

./: Dockerfile  docker-compose.yml  pyproject.toml
scripts/: init_mysite.sh
