[tool.poetry]
name = "django-book-mysite-sample"
version = "0.1.0"
description = ""
authors = ["kaito2 <kaito.iwatsuki@nislab.doshisha.ac.jp>"]

[tool.poetry.dependencies]
python = "^3.7"
Django = "2.2.*"
django-cleanup = "4.0.*"
Pillow = "7.1.*"
stripe = "2.45.*"
django-environ = "0.4.*"
gunicorn = "20.0.*"
mysqlclient = "1.4.*"

[tool.poetry.dev-dependencies]
django-debug-toolbar = "2.2.*"
django-extensions = "2.2.*"
coverage = "5.0.*"
selenium = "3.141.*"
chromedriver-binary = "81.0.*"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
